--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -177,7 +177,7 @@
 		<div class="card card_full">
 			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 			<div class="card__column">
-				<span class="card__category card__category_other">другое</span>
+				<span class="card__category">другое</span>
 				<h2 class="card__title">Бэкенд-антистресс</h2>
 				<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
 				<div class="card__row">
@@ -190,7 +190,7 @@
 
 	<template id="card-basket">
 		<li class="basket__item card card_compact">
-			<span class="basket__item-index">1</span>
+			<span class="basket__item-index"></span>
 			<span class="card__title">Фреймворк куки судьбы</span>
 			<span class="card__price">2500 синапсов</span>
 			<button class="basket__item-delete card__button" aria-label="удалить"></button>
